--- a/src/main/webapp/resources/pharmacy/inward/issueBill.xhtml
+++ b/src/main/webapp/resources/pharmacy/inward/issueBill.xhtml
@@ -186,6 +186,14 @@
                             </td>
 
                         </tr>
+                        <tr>
+                            <td colspan="4" style="overflow: visible;">
+                                <h:outputLabel value="#{bip.descreption}"  styleClass="itemsBlock"   >
+                                </h:outputLabel>
+
+
+                            </td>
+                        </tr>
 
 
 
