--- a/src/main/webapp/resources/pharmacy/inward/issueBill_request.xhtml
+++ b/src/main/webapp/resources/pharmacy/inward/issueBill_request.xhtml
@@ -178,13 +178,18 @@
 
 
                             </td>
-                        
+
                             <td>
                                 <h:outputLabel    value="#{bip.pharmaceuticalBillItem.qty}"    styleClass="itemsBlock"   style="text-align: right; padding-right: 30px;" >
                                     <f:convertNumber integerOnly="true" />
                                 </h:outputLabel>
                             </td>
 
+                        </tr>
+                        <tr>
+                            <td colspan="4" >
+                                <h:outputLabel value="#{bip.descreption}"  />
+                            </td>
                         </tr>
 
 
