--- a/src/main/webapp/ward/ward_pharmacy_reprint_bht_issue_request.xhtml
+++ b/src/main/webapp/ward/ward_pharmacy_reprint_bht_issue_request.xhtml
@@ -42,8 +42,12 @@
                                     #{bip.item.name}
                             </p:column>
                             <p:column>
-                                <f:facet name="header">Value</f:facet>
+                                <f:facet name="header">Qty</f:facet>
                                     #{bip.pharmaceuticalBillItem.qty}
+                            </p:column>
+                            <p:column>
+                                <f:facet name="header">Direction</f:facet>
+                                    #{bip.descreption}
                             </p:column>
                             <p:column>
                                 <f:facet name="header">Value</f:facet>
