--- a/src/main/webapp/theater/inward_search_surgery.xhtml
+++ b/src/main/webapp/theater/inward_search_surgery.xhtml
@@ -14,7 +14,7 @@
                     <p:panel header="Search Bills" >
                         <f:facet name="header" >
                             <h:panelGroup>
-                                <h:panelGrid columns="5">
+                                <h:panelGrid columns="7">
                                     <h:outputLabel value="From Date"/>
                                     <p:calendar styleClass="dateTimePicker" id="fromDate" 
                                                 value="#{searchController.fromDate}" navigator="false" 
@@ -25,12 +25,14 @@
                                     <p:calendar id="toDate" value="#{searchController.toDate}" navigator="false" pattern="dd MMMM yyyy hh mm ss a" >
 
                                     </p:calendar>
+                                    <p:selectBooleanCheckbox value="#{searchController.searchKeyword.activeAdvanceOption}" itemLabel="Search All" />
                                     <p:commandButton ajax="false" action="#{searchController.createInwardSurgeryBills}" value="Search" onclick="onSubmitButton();" />
                                 </h:panelGrid>
 
-                                <h:panelGrid columns="7">
+                                <h:panelGrid columns="8">
                                     <h:outputLabel value="Bill No"/>
                                     <h:outputLabel value="BHT No"/>
+                                    <h:outputLabel value="Surgery Name"/>                                    
                                     <h:outputLabel value="Surgery Name"/>                                    
                                     <h:outputLabel value="Perfomed Doctor Name"/>
                                     <h:outputLabel value="Patient Name"/>
@@ -38,7 +40,13 @@
                                     <h:outputLabel value="Total"/>
                                     <p:inputText autocomplete="off"  value="#{searchController.searchKeyword.billNo}" />
                                     <p:inputText autocomplete="off"  value="#{searchController.searchKeyword.bhtNo}" />
-                                    <p:inputText autocomplete="off"  value="#{searchController.searchKeyword.itemName}" />                                    
+                                    <p:inputText autocomplete="off"  value="#{searchController.searchKeyword.itemName}" />    
+                                    <p:autoComplete forceSelection="true"
+                                                    value="#{searchController.searchKeyword.item}" 
+                                                    completeMethod="#{procedureController.completeDiagnosis}"
+                                                    var="apt2" itemLabel="#{apt2.name}"
+                                                    itemValue="#{apt2}" size="30" styleClass="mediuminput">
+                                    </p:autoComplete>
                                     <p:inputText autocomplete="off"  value="#{searchController.searchKeyword.staffName}" />
                                     <p:inputText autocomplete="off" value="#{searchController.searchKeyword.patientName}" />
                                     <p:inputText autocomplete="off"  value="#{searchController.searchKeyword.patientPhone}" />
@@ -51,7 +59,7 @@
                             id="tblBills" 
                             value="#{searchController.bills}" 
                             var="bb"
-                          
+
                             >
                             <p:column>
                                 <p:commandButton ajax="false" value="View Bill" action="/theater/inward_bill_surgery" onclick="onSubmitButton();" >
@@ -84,7 +92,7 @@
                             <p:column headerText="Perfomed Doctor Speciality" >
                                 <h:outputLabel value="#{bb.staff.speciality.name}" ></h:outputLabel>
                             </p:column>
-                          
+
                             <p:column headerText="Client" >
                                 <h:outputLabel value="#{bb.patientEncounter.patient.person.nameWithTitle}" ></h:outputLabel>
                             </p:column>  
